1.1.0
=====
Support for unstructured grids which follow the UGRID conventions - includes refactor of dataset hierarchy
Support for categorical datasets, including plotting, legend, and GetFeatureInfo
Added more perceptually linear colour palettes
Optimisation of Polygon.contains()
Uses new background map server
Re-added datetime label on animations
Bugfixes:
    Animations respect log scale
    Metadata filters on ImageLayers now only get applied to the relevant layers (not all layers)
    Border around extraction area now only applies to glyph layers
    Handles environments where the user's home directory is non-writable

1.0.4
=====
Modified AbstractPointDataset to make it simpler to extend
Preliminary support for WaterML
Made it possible to specify dataset as part of the URL
Access to specific datasets in Godiva3 (incl. dynamic datasets)
Better error handling in Godiva3
Support for named colours
Fixed bug where a parsing error on a style can cause ncWMS not to start
Preliminary support for MODIS land cover

1.0.3
=====
Added CHANGELOG
Use latest version of JFreeChart
Bugfixes:
    Geographic bounding boxes were not always working in GetCapabilities
    Time values were not read correctly in aggregations when they were stored as floats
    Title generation for dynamic datasets
    Return numerical data in same type as underlying storage

1.0.2
=====
Update docs
Bugfixes:
    Layer names were not appearing in capabilities document
    Last update times were not appearing in ncWMS admin interface
    Only show messages from exceptions if present

1.0.1
=====
Updated docs
Fixed bug where pcolor library was not being included in edal-graphics

1.0
===
First release of EDAL 1.0 / ncWMS 2.0